[package]
name = "rocks"
version = "0.1.0"
authors = ["Michael Li <alimy@gility.net>"]
description = "Rust tutorial example"
license = "Apache-2.0"

[workspace]
members = [
    "guessing_game",
    "rocks_ctl",
    "variables",
    "ownership",
    "communicator"
]

[dependencies]
guessing_game = { path = "guessing_game" }
ownership = { path = "ownership" }
communicator = { path = "communicator" }
clap = "2"